<resources>
    <string name="app_name">Watchful</string>

    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_recycler">Recycler</string>
    <string name="action_about">About</string>
    <string name="action_grid">Grid</string>
    <string name="action_map">Map</string>


    <string name="title_activity_twit_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_title">Watchful</string>
    <string name="welcome_description">A fun fact about myself: My first degree was in Drama.
        Please enter your twitter username.</string>
    <string name="welcome_name">Jason Panzer</string>
    <string name="welcome_button">Search!</string>
    <string name="username_prompt">\@therealdonald</string>
    <string name="title_activity_username">UsernameActivity</string>
    <string name="username_view">Thingy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_recycler">RecyclerActivity</string>
    <string name="title_activity_grid_card">GridCardActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_activity_message">Watchful uses your twitter feed to follow messages from
        politicians in the public eye. You can use the app to corroborate their tweets and
        (eventually) judge the sentiment behind them.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dialog_fire_missiles">Fire Missiles?</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>

    <!-- todo refine these options -->
    <string-array name="grid_button_strings">
        <item>Add username</item>
        <item>View list</item>
        <item>Read tweets</item>
        <item>Settings or About</item>
    </string-array>

    <!-- Map Strings -->
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="no_geocoder_available">No Geocoder Available</string>

    <!--FetchAddress service strings-->
    <string name="service_not_available">Service Not Avail!</string>
    <string name="invalid_lat_long_used">Invalid coords!</string>
    <string name="no_address_found">No Address Discovered!</string>
    <string name="address_found">Address Discovered!</string>

</resources>
