<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.indexyear.jd.watchful.WelcomeActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="1"
        android:title="@string/action_about"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_grid"
        android:orderInCategory="10"
        android:title="@string/action_grid"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recycler"
        android:orderInCategory="20"
        android:title="@string/action_recycler"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="never" />
</menu>
