<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.indexyear.jd.watchful.WelcomeActivity"
    tools:showIn="@layout/activity_welcome"
    >

    <TextView
        android:id="@+id/welcome_title"
        android:text="@string/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/welcome_name"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_name"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/welcome_blurb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_name"
        android:text="@string/welcome_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />



    <EditText
        android:id="@+id/username_search"
        android:layout_below="@id/welcome_blurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textNoSuggestions|textShortMessage"
        android:hint="@string/username_prompt"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_below="@id/username_search"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:onClick="sendMessage"
        android:text="@string/welcome_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

</RelativeLayout>
